add Board class to encapsulate board state

--- a/app/src/CMakeLists.txt
+++ b/app/src/CMakeLists.txt
@@ -4,4 +4,6 @@ add_executable(
     ChessApp main.cpp
              Piece.h
              Piece.cpp
+             Board.h
+             Board.cpp
 )
