--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -2,10 +2,14 @@ cmake_minimum_required (VERSION 3.5)
 
 add_executable(
     ChessApp main.cpp
-             Piece.h
-             Piece.cpp
              Board.h
              Board.cpp
              CLI.h
              CLI.cpp
 )
+
+target_link_libraries(
+    ChessApp ChessLib
+)
+
+include_directories(..)
