add unit test for position string checking

--- a/src/unit_tests/CMakeLists.txt
+++ b/src/unit_tests/CMakeLists.txt
@@ -3,6 +3,8 @@ cmake_minimum_required (VERSION 3.5)
 add_executable(
     app_unit_tests 
     app_unit_tests.cpp
+    PieceUnitTests.cpp
 )
-add_dependencies(app_unit_tests Catch)
-target_link_libraries(app_unit_tests PUBLIC Catch)
+
+target_link_libraries(app_unit_tests PUBLIC ChessLib Catch)
+include_directories(..)
