--- a/src/ChessLib/CMakeLists.txt
+++ b/src/ChessLib/CMakeLists.txt
@@ -3,4 +3,6 @@ cmake_minimum_required(VERSION 3.5)
 add_library(
     ChessLib SHARED Piece.h
                     Piece.cpp
+                    Board.h
+                    Board.cpp
 )
