Add simple unit test for Board creation

--- a/src/unit_tests/CMakeLists.txt
+++ b/src/unit_tests/CMakeLists.txt
@@ -2,8 +2,9 @@ cmake_minimum_required (VERSION 3.5)
 
 add_executable(
     app_unit_tests 
-    app_unit_tests.cpp
-    PieceUnitTests.cpp
+        app_unit_tests.cpp
+        BoardUnitTests.cpp
+        PieceUnitTests.cpp
 )
 
 target_link_libraries(app_unit_tests PUBLIC ChessLib Catch)
