Add Game class with Board member

--- a/src/ChessLib/CMakeLists.txt
+++ b/src/ChessLib/CMakeLists.txt
@@ -5,4 +5,6 @@ add_library(
                     Piece.cpp
                     Board.h
                     Board.cpp
+                    Game.h
+                    Game.cpp
 )
