--- a/src/unit_tests/CMakeLists.txt
+++ b/src/unit_tests/CMakeLists.txt
@@ -5,6 +5,7 @@ add_executable(
         app_unit_tests.cpp
         BoardUnitTests.cpp
         PieceUnitTests.cpp
+        GameUnitTests.cpp
 )
 
 target_link_libraries(app_unit_tests PUBLIC ChessLib Catch)
