Windows compilation: - add dllimport/dllexport to classes and functions - fix compilation issue with attempt to generate default copy consturctor   for Board class

--- a/src/ChessLib/CMakeLists.txt
+++ b/src/ChessLib/CMakeLists.txt
@@ -10,3 +10,5 @@ add_library(
                     Game.cpp
                     IPlayer.h
 )
+
+target_compile_definitions(ChessLib PRIVATE CHESSLIB_EXPORT)
