--- a/src/ChessLib/CMakeLists.txt
+++ b/src/ChessLib/CMakeLists.txt
@@ -1,7 +1,8 @@
 cmake_minimum_required(VERSION 3.5)
 
 add_library(
-    ChessLib SHARED Common.h
+    ChessLib SHARED ChesslibAPI.h
+                    Common.h
                     Piece.h
                     Piece.cpp
                     Board.h
