--- a/src/unit_tests/CMakeLists.txt
+++ b/src/unit_tests/CMakeLists.txt
@@ -8,6 +8,7 @@ add_executable(
         GameUnitTests.cpp
 		PawnUnitTests.cpp
 		BishopUnitTests.cpp
+        KnightUnitTests.cpp
 )
 
 target_link_libraries(app_unit_tests PUBLIC ChessLib Catch)
