--- a/src/unit_tests/CMakeLists.txt
+++ b/src/unit_tests/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required (VERSION 3.5)
 add_executable(
     app_unit_tests 
         app_unit_tests.cpp
+		CommonUnitTests.cpp
         BoardUnitTests.cpp
         PieceUnitTests.cpp
         GameUnitTests.cpp
