add queen unit test on initial position

--- a/src/unit_tests/CMakeLists.txt
+++ b/src/unit_tests/CMakeLists.txt
@@ -11,6 +11,7 @@ add_executable(
         BishopUnitTests.cpp
         KnightUnitTests.cpp
         RookUnitTests.cpp
+        QueenUnitTests.cpp
         ImportExportUtilsTests.cpp
 )
 
