add simple GameManager implementation

--- a/src/ChessLib/CMakeLists.txt
+++ b/src/ChessLib/CMakeLists.txt
@@ -10,6 +10,8 @@ add_library(
                     Board.cpp
                     Game.h
                     Game.cpp
+                    GameManager.h
+                    GameManager.cpp
                     IPlayer.h
                     Pieces.h
                     Pieces.cpp
